5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1590_2049.log
== TEST (2019-03-22 19:49:38) 
-- CODE:
# Teste seu codigo aos poucos.
x = input("dividendo:")
y = input("divisor:")
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
principal = x/y


print(principal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    principal = x/y
TypeError: unsupported operand type(s) for /: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:49:59) 
-- CODE:
# Teste seu codigo aos poucos.
x = input("dividendo:")
y = input("divisor:")
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
principal = float(x/y)


print(principal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    principal = float(x/y)
TypeError: unsupported operand type(s) for /: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:50:14) 
-- CODE:
# Teste seu codigo aos poucos.
x = input("dividendo:")
y = input("divisor:")
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
principal = float(x/y)


print(principal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    principal = float(x/y)
TypeError: unsupported operand type(s) for /: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:51:34) 
-- CODE:
# Teste seu codigo aos poucos.
x = input("dividendo:")
y = input("divisor:")
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.



print(x,y)
-- OUTPUT:
8 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:51:47) 
-- CODE:
# Teste seu codigo aos poucos.
x = input("dividendo:")
y = input("divisor:")
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.



print(x)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:51:58) 
-- CODE:
# Teste seu codigo aos poucos.
x = input("dividendo:")
y = input("divisor:")
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.



print(x)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:55:54) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")


z= float(x)/float(y)

w= float(x)%float(y)
print(x)
print(y)
print(z)
print(w)
-- OUTPUT:
8
5
1.6
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 19:56:16) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")


z= float(x)/float(y)

w= float(x)%float(y)
print(x)
print(y)
print(z)
print(w)
-- EXECUTION TIME:
0.155413
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1.6
3.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7.0
0.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173.5
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:56:30) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")


z= float(x)/float(y)

w= float(x)%float(y)
print(x)
print(y)
print(z)
print(w)
-- OUTPUT:
8
5
1.6
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:58:54) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)/float(y)
b= float(x)%float(y)
var1=round(a,1)
var2=round(b,1)

print(x)
print(y)
print(a)
print(b)
-- OUTPUT:
8
5
1.6
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:59:20) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)/float(y)
b= float(x)%float(y)
var1=round(a,1)
var2=round(b,1)

print(x)
print(y)
print(var1)
print(var2)
-- OUTPUT:
8
5
1.6
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:59:36) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)/float(y)
b= float(x)%float(y)
var1=round(a,0)
var2=round(b,0)

print(x)
print(y)
print(var1)
print(var2)
-- OUTPUT:
8
5
2.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:59:50) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)/float(y)
b= float(x)%float(y)
var1=round(a,)
var2=round(b,)

print(x)
print(y)
print(var1)
print(var2)
-- OUTPUT:
8
5
2
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:00:09) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)/float(y)
b= float(x)%float(y)
var1=round(a,)
var2=round(b,)

print(x)
print(y)
print(var1)
print(var2)
-- EXECUTION TIME:
0.186222
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
2
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
174
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:00:39) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)/float(y)
b= float(x)%float(y)
var1=(a)
var2=(b)

print(x)
print(y)
print(var1)
print(var2)
-- OUTPUT:
8
5
1.6
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:01:13) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)/float(y)
b= float(x)%float(y)
var1=(a//)
var2=(b//)

print(x)
print(y)
print(var1)
print(var2)
-- ERROR:
File "XXXX", line 5
    var1=(a//)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:01:28) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)/float(y)
b= float(x)%float(y)
var1=(//a)
var2=(//b)

print(x)
print(y)
print(var1)
print(var2)
-- ERROR:
File "XXXX", line 5
    var1=(//a)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:01:55) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)/float(y)
b= float(x)%float(y)
var1=(// a)
var2=(// b)

print(x)
print(y)
print(var1)
print(var2)
-- ERROR:
File "XXXX", line 5
    var1=(// a)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:02:19) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)/float(y)
b= float(x)%float(y)
var1=((//)a)
var2=((//)b)

print(x)
print(y)
print(var1)
print(var2)
-- ERROR:
File "XXXX", line 5
    var1=((//)a)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:02:34) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)/float(y)
b= float(x)%float(y)
var1=(//)(a)
var2=(//)(b)

print(x)
print(y)
print(var1)
print(var2)
-- ERROR:
File "XXXX", line 5
    var1=(//)(a)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:08:06) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)//float(y)
b= float(x)%float(y)
var1=a
var2=b

print(x)
print(y)
print(var1)
print(var2)
-- OUTPUT:
8
5
1.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:08:23) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)//float(y)
b= float(x)%float(y)
var1=a
var2=b

print(x)
print(y)
print(var1)
print(var2)
-- EXECUTION TIME:
0.153396
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1.0
3.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7.0
0.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173.0
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:08:41) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)//float(y)
b= float(x)%float(y)
var1=a
var2=b

print(x)
print(y)
print(var1)
print(var2)
-- OUTPUT:
8
5
1.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:09:05) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)/float(y)
b= float(x)%float(y)
var1=a
var2=b

print(x)
print(y)
print(var1)
print(var2)
-- OUTPUT:
8
5
1.6
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:09:20) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)/float(y)
b= float(x)%float(y)
var1=a
var2=b

print(x)
print(y)
print(var1)
print(var2)
-- OUTPUT:
8
5
1.6
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:10:12) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)/float(y)
b= float(x)%float(y)
var1=a//
var2=b//

print(x)
print(y)
print(var1)
print(var2)
-- ERROR:
File "XXXX", line 5
    var1=a//
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:11:01) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)/float(y)
b= float(x)%float(y)
var1= (/a/)
var2= (/b/)

print(x)
print(y)
print(var1)
print(var2)
-- ERROR:
File "XXXX", line 5
    var1= (/a/)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:11:38) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)/float(y)
b= float(x)%float(y)
var1= (a(//).)
var2= ((//).b)

print(x)
print(y)
print(var1)
print(var2)
-- ERROR:
File "XXXX", line 5
    var1= (a(//).)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:11:50) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)/float(y)
b= float(x)%float(y)
var1= ((//).a)
var2= ((//).b)

print(x)
print(y)
print(var1)
print(var2)
-- ERROR:
File "XXXX", line 5
    var1= ((//).a)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:12:03) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)/float(y)
b= float(x)%float(y)
var1= (//).a
var2= (//).b

print(x)
print(y)
print(var1)
print(var2)
-- ERROR:
File "XXXX", line 5
    var1= (//).a
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:12:35) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)/float(y)
b= float(x)%float(y)
var1= (//).(a)
var2= 

print(x)
print(y)
print(var1)
print(var2)
-- ERROR:
File "XXXX", line 5
    var1= (//).(a)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:13:03) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)(//)float(y)
b= float(x)%float(y)
var1= (//).(a)
var2=  

print(x)
print(y)
print(var1)
print(var2)
-- ERROR:
File "XXXX", line 3
    a= float(x)(//)float(y)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:13:11) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)//float(y)
b= float(x)%float(y)
var1= (//).(a)
var2=  

print(x)
print(y)
print(var1)
print(var2)
-- ERROR:
File "XXXX", line 5
    var1= (//).(a)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:13:25) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)//float(y)
b= float(x)%float(y)
var1= a
var2=  b

print(x)
print(y)
print(var1)
print(var2)
-- OUTPUT:
8
5
1.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:13:46) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)//float(y)
b= float(x)%float(y)
var1= a
var2=  b

print(x)
print(y)
print(var1//)
print(var2//)
-- ERROR:
File "XXXX", line 10
    print(var1//)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:27:00) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)//float(y)
b= float(x)%float(y)
var1= a
var2=  b
print(x)
print(y)
print(var1)
print(var2)
-- OUTPUT:
8
5
1.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:29:29) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)//float(y)
b= float(x)%float(y)
var1= a
var2=  b
print(x)
print(y)
print(var1)
print(var2)
-- EXECUTION TIME:
0.169577
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1.0
3.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7.0
0.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173.0
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:29:52) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x)/float(y)
b= float(x)%float(y)
var1= a
var2=  b
print(x)
print(y)
print(var1)
print(var2)
-- OUTPUT:
8
5
1.6
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:33:24) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= float(x//y)
b= float(x)%float(y)
var1= a
var2= b
print(x)
print(y)
print(var1)
print(var2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a= float(x//y)
TypeError: unsupported operand type(s) for //: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:33:44) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
a= (x//y)
b= float(x)%float(y)
var1= a
var2= b
print(x)
print(y)
print(var1)
print(var2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a= (x//y)
TypeError: unsupported operand type(s) for //: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:35:48) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
print(x)
print(y)
print(x//y)
print(x%y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(x//y)
TypeError: unsupported operand type(s) for //: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:36:29) 
-- CODE:
x = input("dividendo:")
y = input("divisor:")
print(x)
print(y)
print(x//y)
print(x%y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(x//y)
TypeError: unsupported operand type(s) for //: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:37:37) 
-- CODE:
x = int(input("dividendo:"))
y = int(input("divisor:"))
print(x)
print(y)
print(x//y)
print(x%y)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:37:42) 
-- CODE:
x = int(input("dividendo:"))
y = int(input("divisor:"))
print(x)
print(y)
print(x//y)
print(x%y)
-- EXECUTION TIME:
0.125817
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
